adds webviews to event url

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".src.activity.WebViewActivity" />
+
     </application>
 
 </manifest>
